testsuite/poke.pkl/mod-f64-diag-1.pk
/* { dg-do compile } */

var res
  = (11 as uint<63>) .% 1L; /* { dg-error "invalid operand .*" } */
